--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 *.html linguist-detectable=false
 *.css linguist-detectable=false
 *.scss linguist-detectable=false
-*.javascript linguist-detectable=false
+*.js linguist-detectable=false
